@@ -28,7 +28,6 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 
 cvar_t *s_volume;
 cvar_t *s_musicVolume;
-cvar_t *s_doppler;
 cvar_t *s_backend;
 
 static soundInterface_t si;
@@ -240,7 +239,6 @@ void S_Init()
 
 	s_volume = Cvar_Get( "s_volume", "0.8", CVAR_ARCHIVE );
 	s_musicVolume = Cvar_Get( "s_musicvolume", "0.25", CVAR_ARCHIVE );
-	s_doppler = Cvar_Get( "s_doppler", "0", CVAR_ARCHIVE );
 	s_backend = Cvar_Get( "s_backend", "", CVAR_ROM );
 
 	const cvar_t* cv = Cvar_Get( "s_initsound", "1", 0 );
